--- a/config/compilation/release_kmb-sc_hde.json
+++ b/config/compilation/release_kmb-sc_hde.json
@@ -5,7 +5,7 @@
                 "name" : "GlobalConfigParams",
                 "_comment" : "Stores common params accross multiple passes. Access through the Computation Model.",
                 "recorded_model": false,
-                "verbose": "Info",
+                "verbose": "Error",
                 "weights_form": "None",
                 "referenceDevice": "A0",
                 "barrier_index_assignment" : "Dynamic",
@@ -86,6 +86,23 @@
             "AssignOutputNode",
             "ComputeMemory",
             "AssignUniqueOpId",
+            {
+                "name": "ApplyTargetVars",
+                "Vars": [
+                    {
+                        "name": "dmaControllers",
+                        "block": "nce",
+                        "var": "DMAControllers",
+                        "default": 1
+                    },
+                    {
+                        "name": "csramLimit",
+                        "block": "nce",
+                        "var": "CSRAM",
+                        "default": 0
+                    }
+                ]
+            },
             {
                 "name": "CreateSourceStructure",
                 "VersionMajor": 3,
@@ -208,6 +225,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
@@ -216,6 +234,7 @@
             "ConvertOpsToTasks",
             "AdaptFixedPointCompute",
             "SetUpPPETasks",
+            "TaskMultiplePostOps",
             "ForceSerialize",
             "KMBOrderConversion",
             "AlignUnpopulatedTensors",
@@ -272,18 +291,20 @@
                 "content": "full",
                 "html": true
             },
+            {
+              "name" : "ChainPipeliningTransform",
+              "select_stages" : 2
+            },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
-              "no_temporal_edges" : true
+              "no_temporal_edges" : true,
+              "enable_cmx_concat" : true
             },
             {
-                "name": "GenerateDot",
-                "output": "output/dots/output_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
+              "name" : "RecomputeImplicitOpMemoryLocations"
             },
+            "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
@@ -307,6 +328,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetSliceAddressesInCMX",
             "TransitiveReduction",
             "LayerNumbering",
             "PopulateWeightsTablesPointers",
@@ -323,7 +345,8 @@
               "producer_bound" : 256,
               "remove_barriers_in_upa_tail" : true,
               "remove_redundant_wait_barriers" : true
-            }
+            },
+            "LayoutDMA"
         ]
     },
     "validate": {
@@ -339,6 +362,10 @@
             {
                 "name": "GenerateBlobKmb",
                 "output": "output/mcm.blob"
+            },
+            {
+                "name": "ConvertFlatbuffer",
+                "input": "output/mcm.blob"
             }
         ]
     },
