--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -283,6 +283,10 @@
         "Singular": [
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
+            {
+              "name" : "ChainPipeliningTransform",
+              "select_stages" : 2
+            },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
@@ -315,6 +319,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetSliceAddressesInCMX",
             "TransitiveReduction",
             "LayerNumbering",
             "PopulateWeightsTablesPointers",
