--- a/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
@@ -225,6 +225,7 @@
     },
     "kmb_adapt": {
         "Singular": [
+            "DecideConcatLocation",
             "ConcatAsImplicit",
             "PermuteAsImplicit",
             "ReshapeAsImplicit",
@@ -294,7 +295,6 @@
               "name" : "ChainPipeliningTransform",
               "select_stages" : 2
             },
-
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
@@ -302,16 +302,9 @@
               "enable_cmx_concat" : true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations",
-              "output": "mem_locations.txt"
+              "name" : "RecomputeImplicitOpMemoryLocations"
             },
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/output_op_model.dot",
-                "scope": "OpModel",
-                "content": "full",
-                "html": true
-            },
+            "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
                 "name": "TransitiveReduction",
                 "filter": "MemoryRequirement"
@@ -335,6 +328,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetSliceAddressesInCMX",
             "TransitiveReduction",
             "LayerNumbering",
             "PopulateWeightsTablesPointers",
@@ -365,13 +359,6 @@
             "RemoveRedundantUpdateBarriers",
             "DMAOrdering",
             "BuildGraphFileKmb",
-            {
-                "name": "GenerateDot",
-                "output": "output/dots/before_serialization.dot",
-                "scope": "ControlModel",
-                "content": "full",
-                "html": true
-            },
             {
                 "name": "GenerateBlobKmb",
                 "output": "output/mcm.blob"
