--- a/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sparse_with_CM_Conv_hde.json
@@ -333,6 +333,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetSliceAddressesInCMX",
             "TransitiveReduction",
             "LayerNumbering",
             "PopulateWeightsTablesPointers",
