Native Scheduler Support for InPlace Ops with Applications to Chain Pipelining. (#975)
* Inplace Eltwise Implementation Single Cluster

* Add native inplace op support in the scheduler

* Add spill unit-test

* Integrate output of scheduler algorithm into mcm scheduler

* If Eltwise input has different strategy its not compatiable

* Change eltwise selection

* Fix unit test non-determinism

* Skip sparse eltwise

* Ignore Eltwises connected to non DPU inputs

* Change stages to 0

* Add capability to dump chain pipeline info

* Add flow control attribute option when adding pseudo dependency

* Fix compilation issue in dumping chain info

* Move eltwise locator to an independent pass and automatically adjust stages based on inplace eltwise

* add chain dumping info

* Our logic of computation of Etlwise odu_offsets is broken its extremely sensitive to changes in CMX address, so avoiding these chains for now

* Turn off G.O pipelining

* Update CDs and cleanup debug output

* Address review comments

* remove debug output

Co-authored-by: Alec Leckey <alec.leckey@gmail.com>

--- a/config/compilation/release_kmb-sc.json
+++ b/config/compilation/release_kmb-sc.json
@@ -287,6 +287,9 @@
                 "html": true
             },
             {
+              "name" : "LocateInplaceEltwiseOps"
+            },
+            {
               "name" : "ChainPipeliningTransform",
               "select_stages" : 2
             },
@@ -294,7 +297,8 @@
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
               "no_temporal_edges" : true,
-              "enable_cmx_concat" : true
+              "enable_cmx_concat" : true,
+              "enable_inplace_eltwise": true
             },
             {
               "name" : "RecomputeImplicitOpMemoryLocations"
