--- a/config/compilation/release_kmb.json
+++ b/config/compilation/release_kmb.json
@@ -280,6 +280,9 @@
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
             {
+              "name" : "LocateInplaceEltwiseOps"
+            },
+            {
               "name" : "ChainPipeliningTransform",
               "select_stages" : 2
             },
@@ -287,7 +290,8 @@
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
               "no_temporal_edges" : true,
-              "enable_cmx_concat" : true 
+              "enable_cmx_concat" : true,
+              "enable_inplace_eltwise": true
             },
             {
               "name" : "RecomputeImplicitOpMemoryLocations"
