--- a/config/compilation/release_kmb-sparse_with_CM_Conv.json
+++ b/config/compilation/release_kmb-sparse_with_CM_Conv.json
@@ -286,6 +286,9 @@
                 "html": true
             },
             {
+              "name" : "LocateInplaceEltwiseOps"
+            },
+            {
               "name" : "ChainPipeliningTransform",
               "select_stages" : 2
             },
@@ -293,7 +296,8 @@
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
               "no_temporal_edges" : true,
-              "enable_cmx_concat" : true 
+              "enable_cmx_concat" : true,
+              "enable_inplace_eltwise" : true
             },
             {
               "name" : "RecomputeImplicitOpMemoryLocations"
