Add optional standalone package build for mcmCompiler
* Controlled via `ENABLE_MCM_COMPILER_PACKAGE` CMake option for the `kmb-plugin` tree.
* Reuse IE CPack wrapper with separate component for mcmCompiler.
* Set mcmCompiler PROJECT_VERSION to actual state.
* Use mcmCompiler PROJECT_VERSION for library version/soversion.
* Disable autoclean for generated meta files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,9 @@ project(InferenceEngineVPUXPlugin)
 # Build properties
 #
 
-set(VPUX_DEVICE_NAME    "VPUX")
-set(KMB_DEVICE_NAME     "KMB")
+set(VPUX_DEVICE_NAME        "VPUX")
+set(KMB_DEVICE_NAME         "KMB")
+set(MCM_COMPILER_COMPONENT  "mcmCompiler")
 
 set(IE_MAIN_VPUX_PLUGIN_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(THIRDPARTY_SERVER_PATH "http://nnt-srv01.inn.intel.com/dl_score_engine/")
@@ -88,4 +89,9 @@ add_subdirectory(tools)
 # CPack
 #
 
-ie_cpack(${VPUX_DEVICE_NAME} ${KMB_DEVICE_NAME})
+set(all_components ${VPUX_DEVICE_NAME} ${KMB_DEVICE_NAME})
+if(ENABLE_MCM_COMPILER_PACKAGE)
+    list(APPEND all_components ${MCM_COMPILER_COMPONENT})
+endif()
+
+ie_cpack(${all_components})
