--- a/src/vpux_al/CMakeLists.txt
+++ b/src/vpux_al/CMakeLists.txt
@@ -31,8 +31,7 @@ target_include_directories(${TARGET_NAME}
     PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}/include"
     PRIVATE
-        # FIXME: should be here?
-        "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include")
+        "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include/vpu")
 
 link_system_libraries(${TARGET_NAME}
     PRIVATE
