Switch to graphFile-schema mirror repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "thirdparty/gapi_sipp"]
 	path = thirdparty/gapi_sipp
-	url = git@gitlab-icv.inn.intel.com:G-API/g-api-vpu.git
+	url = ../../G-API/g-api-vpu.git
 [submodule "thirdparty/flatbuffers"]
 	path = thirdparty/flatbuffers
 	url = https://github.com/google/flatbuffers.git
 [submodule "thirdparty/graphFile-schema"]
 	path = thirdparty/graphFile-schema
-	url = git@github.com:movidius/graphFile-schema.git
+	url = ../../movidius/graphFile-schema.git
