[HDDL2] Move HDDL2 backend to separate lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,5 +22,6 @@ add_subdirectory(frontend_mcm)
 add_subdirectory(kmb_plugin)
 if(ENABLE_HDDL2)
     add_subdirectory(hddl2_plugin)
+    add_subdirectory(hddl2_backend)
 endif()
 add_subdirectory(vpux_plugin)
