[VPUX] Rename HDDL2 plugin to VPUX

--- a/src/hddl2_plugin/CMakeLists.txt
+++ b/src/hddl2_plugin/CMakeLists.txt
@@ -21,12 +21,12 @@ endif()
 file(GLOB_RECURSE SOURCES *.cpp *.hpp *.h)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-list(FILTER SOURCES EXCLUDE REGEX "hddl2_plugin.cpp")
+list(FILTER SOURCES EXCLUDE REGEX "vpux_plugin.cpp")
 
 set(HDDL2_PLUGIN_TARGET "HDDL2Plugin" CACHE INTERNAL "")
 set(HDDL2_PLUGIN_OBJS_TARGET "${HDDL2_PLUGIN_TARGET}_objs" CACHE INTERNAL "")
 set(HDDL2_PLUGIN_STATIC_TARGET "${HDDL2_PLUGIN_TARGET}_static" CACHE INTERNAL "")
-set(HDDL2_PLUGIN_ENGINE_SOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/src/hddl2_plugin.cpp" CACHE INTERNAL "")
+set(HDDL2_PLUGIN_ENGINE_SOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/src/vpux_plugin.cpp" CACHE INTERNAL "")
 
 #
 # Object library
