Revert "Merge branch 'vv/faster-build' into 'master'"
This reverts commit e108b8b633b4b5233271098d16a2ad4d47b8632c, reversing
changes made to 2265c53d34fe771bd89327d3dd8d8f33c284b44f.

--- a/src/frontend_mcm/CMakeLists.txt
+++ b/src/frontend_mcm/CMakeLists.txt
@@ -28,10 +28,6 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
 add_library(${OBJ_TARGET_NAME} OBJECT ${SOURCES})
 
-ie_faster_build(${OBJ_TARGET_NAME}
-    PCH PRIVATE "src/precomp.hpp"
-)
-
 enable_warnings_as_errors(${OBJ_TARGET_NAME})
 
 target_compile_definitions(${OBJ_TARGET_NAME}
@@ -74,11 +70,7 @@ target_link_libraries(${OBJ_TARGET_NAME}
 )
 
 if(ENABLE_CLANG_FORMAT)
-    add_clang_format_target(clang_format_${OBJ_TARGET_NAME}
-        FOR_TARGETS ${OBJ_TARGET_NAME}
-        EXCLUDE_PATTERNS ".*precomp.hpp"
-        ALL
-    )
+    add_clang_format_target(clang_format_${OBJ_TARGET_NAME} FOR_TARGETS ${OBJ_TARGET_NAME} ALL)
     add_dependencies(${OBJ_TARGET_NAME} clang_format_${OBJ_TARGET_NAME})
 endif()
 
