--- a/src/vpual_backend/CMakeLists.txt
+++ b/src/vpual_backend/CMakeLists.txt
@@ -18,35 +18,46 @@ if(ENABLE_LTO)
     ie_enable_lto()
 endif()
 
-set(TARGET_NAME vpual_backend)
+set(TARGET_NAME "vpual_backend")
+set(OBJ_TARGET_NAME "vpual_backend_obj")
+set(STATIC_TARGET_NAME "vpual_backend_static")
 
 file(GLOB_RECURSE SOURCES *.cpp *.hpp *.h)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-add_library(${TARGET_NAME} MODULE ${SOURCES})
+add_library(${OBJ_TARGET_NAME} OBJECT ${SOURCES})
 
-enable_warnings_as_errors(${TARGET_NAME})
+enable_warnings_as_errors(${OBJ_TARGET_NAME})
 
-target_compile_definitions(${TARGET_NAME}
+target_compile_definitions(${OBJ_TARGET_NAME}
     PRIVATE
         IMPLEMENT_INFERENCE_ENGINE_PLUGIN)
 
-target_include_directories(${TARGET_NAME}
+target_include_directories(${OBJ_TARGET_NAME}
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include")
 
-link_system_libraries(${TARGET_NAME}
-    PRIVATE
+link_system_libraries(${OBJ_TARGET_NAME}
+    PUBLIC
         ${VPUAL_NN_LIBRARY}
         ${VPUSMM_LIBRARY}
+    PRIVATE
         IE::inference_engine
         IE::inference_engine_plugin_api
         IE::vpu_common_lib)
-target_link_libraries(${TARGET_NAME}
+target_link_libraries(${OBJ_TARGET_NAME}
     PRIVATE
         vpux_al
         kmb_utils)
+
+add_library(${TARGET_NAME} MODULE $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
+target_link_libraries(${TARGET_NAME} PRIVATE ${OBJ_TARGET_NAME})
+
+if (ENABLE_TESTS)
+    add_library(${STATIC_TARGET_NAME} STATIC $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
+    target_link_libraries(${STATIC_TARGET_NAME} PUBLIC ${OBJ_TARGET_NAME})
+endif()
 
 if(ENABLE_CLANG_FORMAT)
     add_clang_format_target(clang_format_${TARGET_NAME} FOR_TARGETS ${TARGET_NAME} ALL)
