--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 artifacts/mcmCompilerInstallPackage/bin/* filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
 *.lib filter=lfs diff=lfs merge=lfs -text
+*.elf filter=lfs diff=lfs merge=lfs -text
